# building-namada-sdk-to-wasm

./: Cargo.toml  ouput_from_cargo_tree_package_invert_Socket2.txt  ouput_from_cargo_tree_package_invert_mio.txt  ouput_from_cargo_tree_package_terndermint_rpc.txt
src/: main.rs
