[package]
name = "namada_as_dependency"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
getrandom = { version = "0.2", features = ["js"] }
# namada = { git = "https://github.com/anoma/namada", branch = "mariari/shared-sdk-integration" }

# trying out forked tendermint-rpc for getting Client without HttpClient
tendermint-rpc = { git="https://github.com/memasdeligeorgakis/tendermint-rs.git", branch="feat/00_add_only_client_feature_flag", features = ["only-client"] }

